data/raw_logs/syntactic/syn_3.c.log
/Users/krishtayade/CD_Lab_Project/data/code_snippets/syntactic/syn_3.c: In function 'main':
/Users/krishtayade/CD_Lab_Project/data/code_snippets/syntactic/syn_3.c:1:28: error: expected ')' before ';' token
    1 | int main() { int x = (5 + 2; }
      |                      ~     ^
      |                            )
/Users/krishtayade/CD_Lab_Project/data/code_snippets/syntactic/syn_3.c:1:30: error: expected ',' or ';' before '}' token
    1 | int main() { int x = (5 + 2; }
      |                              ^
/Users/krishtayade/CD_Lab_Project/data/code_snippets/syntactic/syn_3.c:1:30: error: expected declaration or statement at end of input
